--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.6.1",
     "firebase": "^10.8.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.0.0",
     "react-horizontal-scrolling-menu": "^2.7.1",
     "react-loader-spinner": "^6.0.0-0",
